lil styling changes + del readme template

--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
 <body>
   <main>
     <div class="container">
-      <img src="images/image-qr-code.png">
+      <img src="images/image-qr-code.png" alt="QR code linking to the Frontend Mentor challenge page">
       <div class="text-container">
         <h1>Improve your front-end skills by building projects</h1>
         <h2>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
       </div>
     </div>
   </main>
-
-  
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Robert</a>.
-  </div>
+    Coded by <a href="https://github.com/robtoolscode">Robert</a>.
+  </footer>
 </body>
 </html>
