--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 </head>
 <body>
   <main>
-    <div class="container">
+    <section class="container">
       <img src="images/image-qr-code.png" alt="QR code linking to the Frontend Mentor challenge page">
       <div class="text-container">
         <h1>Improve your front-end skills by building projects</h1>
         <h2>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
       </div>
-    </div>
+    </section>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
