--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="images/image-qr-code.png" alt="QR code linking to the Frontend Mentor challenge page">
       <div class="text-container">
         <h1>Improve your front-end skills by building projects</h1>
-        <h2>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </section>
   </main>
